--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,54 @@
+#main-content
+{
+    width: 100%;
+    padding-bottom: 300px;
+
+}
+.img-responsive
+{
+    width: 100%;
+}
+*{
+    margin:0;
+    padding:0;
+
+}
+
+a:hover
+{
+    background-position: right;
+}
+
+.navbar-text{
+
+    text-align: -webkit-center;
+}
+.navbar-text a:hover{
+
+
+    background: grey;
+    text-decoration: none;
+}
+.navbar-dark .navbar-nav li a {
+    color: red;
+}
+.navbar-dark .navbar-nav li a:hover {
+
+    color: red;
+
+    background: grey;
+}
+.navbar-dark .navbar-nav li a:hover, .navbar-dark .navbar-nav li a:active
+{
+    color: red;
+    background: grey;
+}
+.navbar-dark .navbar-nav li a:hover, .navbar-dark .navbar-nav li a select
+{
+    color: red;
+    background: grey;
+}
+
 #footer
 {
     bottom:0;
@@ -333,5 +384,132 @@ input[type=password] {
     background-size: 100% 100%;
     height: 1800px;
 
+
+}
+
+@media screen and (max-width: 768px)
+{
+    .footer .widgets
+    {
+        width:100%;
+        max-height: auto;
+        padding:2.5% 0px;
+        float:none;
+    }
+    .footer .subscribe-text
+    {
+        width:100%;
+    }
+    .footer .main-footer p
+    {
+        font-size: 13px;
+    }
+}
+
+
+
+
+
+@media(min-width: 1025px) {
+    .con{
+        padding-top: 97px;
+    }
+}
+
+@media(max-width: 1024px) {
+
+    .con {
+        padding-top: 97px;
+    }
+}
+
+@media(max-width: 786px) {
+    .con{
+        padding-top: 97px;
+    }
+
+}
+
+@media(max-width: 486px) {
+
+    .con{
+        padding-top: 97px;
+    }
+}
+@media(min-width: 1025px) {
+
+    .forgot{
+        padding-top: 8%;
+    }
+
+    .login{
+        padding-top: 8%;
+    }
+    .signin {
+        padding-top: 8%;
+    }
+
+
+    .form-container{
+        width: 100%;
+    }
+
+
+
+}
+@media(max-width: 1024px) {
+
+    .forgot{
+        padding-top: 8%;
+    }
+
+    .login {
+        padding-top: 8%;
+    }
+
+    .sigin {
+        padding-top: 8%;
+    }
+
+    .contain {
+        padding-top: 50px;
+    }
+}
+@media(max-width: 786px) {
+
+    .forgot{
+        padding-top: 11%;
+    }
+
+    .login{
+        padding-top: 11%;
+    }
+    .signin {
+        padding-top: 11%;
+    }
+
+    .form-container{
+        width: 100%;
+    }
+
+
+}
+
+@media(max-width: 486px) {
+    .forgot{
+        padding-top: 17%;
+    }
+
+
+    .login{
+        padding-top: 17%;
+    }
+    .signin {
+        padding-top: 17%;
+    }
+
+    .form-container{
+        width: 100%;
+    }
 
 }
